# conc-map-bench

./: Cargo.toml  README.md
results/: Exchange.fx.csv  Exchange.std.csv  RapidGrow.fx.csv  RapidGrow.std.csv  ReadHeavy.fx.csv  ReadHeavy.std.csv
scripts/: bench.bash  plot.bash
src/: bench.rs  main.rs
src/adapters/: evmap.rs  leapfrog.rs  mod.rs
