[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bustle = "0.5.1"
tracing-subscriber = "0.3.3"
num_cpus = "1.13.0"
fxhash = "0.2.1"
leapfrog = { version = "0.3.0", features = ["stable_alloc"] }
chashmap = "2.2.2"
contrie = "0.1.4"
flurry = "0.5.0"
dashmap = "5.5.3"
crossbeam-epoch = { version = "0.9.5", package = "crossbeam-epoch" }
parking_lot = "0.12.1"
evmap = "10.0.2"
crossbeam-skiplist = "0.1.3"
structopt = "0.3.25"
json = "0.12.4"
csv = "1.1.6"
serde = { version = "1.0.131", features = ["derive"] }
plotters = "0.3.1"
tikv-jemallocator = "0.5.4"
#solana-sdk = "1.17.0"

[profile.release]
codegen-units = 1
debug = true
panic = "abort"
lto = true
